--- a/Euclidean_chris.ipynb
+++ b/Euclidean_chris.ipynb
@@ -301,9 +301,10 @@
     "        \n",
     "        if obstacle_polygon.contains(cur_dp):\n",
     "            new_dp = relocate_dp(cur_dp, obstacle_polygon)\n",
+    "            final_dp = list(obstacle_polygon.exterior.coords) + [new_dp]\n",
     "            break\n",
     "    \n",
-    "    return dp if new_dp == None else new_dp"
+    "    return [dp] if new_dp == None else final_dp"
    ]
   },
   {
